<resources>
    <string name="app_name">mobileca1_v2</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="clockin">Clock In</string>
    <string name="clockout">Clock Out</string>

</resources>
